 - compact-to-sam mode: fixed output of read groups, which were not correctly written for platform, platform unit,
   and library.
 - suggest-position-slices: add --restrict-per-chromosome option.  When this switch is provided, slices will be
   restricted to start and end on the same chromosome. This is useful to produce intervals to give Mutect,
   for instance.
2.2.1
 - FDR mode: add ability to read groups from VCF file and adjust columns/fields marked as p-value. Mark adjusted
   columns with group q-value.
 - Somatic variation output format: annotate somatic p-value column with 'p-value' group. Fix the type of the p-value
   column to be a number (was String in release 2.2).
 - Somatic variation output format: handle unrecognized sample-ids in the parents column.
 - discover-sequence-variants mode: add assertion to give hint to user that syntax is incorrect in for -s and -e options.
 - compact-file-stats mode: print progress when scanning reads files. Use a buffered reader to improve read file
   parsing performance.
 - discover-sequence-variants: adjust multiplier for left-over filter for somatic variations output format.
 - discover-sequence-variants: Add a new filter to remove indels at a site where a sample shows lots of distinct
   possible indels. Indels at these sites are very likely to be artefactual. We count the number of samples where
   three distinct indel genotypes are seen. If more than 1/4 of the samples have likely indel artifacts, we remove
   all indel candidates at the site. maxIndelPerSite:Maximum number of distinct indels at a given genomic site.:1
   Additional filter: fractionOfSamples: Maximum fraction of samples that can have an indel candidate for the indel
   to be considered (indel candidates that occur in many samples are more likely to be spurious).:0.25
   This filter is added to the somatic variations output format. See dynamic options for this filter with --x-help
2.2